GH-PAGES - The question on everyone's minds.
Finally revealed!

--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
 							At the time of writing PSDLE can attempt to detect PS TV content for <strong>en-us only</strong>. If detected, "TV" will appear next to content's platform.
 						</span>
 						<br /><br />
+						<strong>What does PSDLE stand for?</strong><br />
+						<span>
+							<span style='background-color:#000;color:#000;width:420px;height:1.2em;display:inline-block;cursor:text'></span>
+						</span>
+						<br /><br />
 						<strong>Am I free to copy, modify, redistribute, etc. PSDLE's source code?</strong><br />
 						<span>
 							Yes, per the rules of <a href='//github.com/RePod/psdle/blob/master/LICENSE'>the license</a>.<br />
