GH-PAGES - Breaking news.
**en-us** BibleThump

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div id='caro_slides'>
 							<div style='background-image:url("//i.imgur.com/nQShH6n.jpg")'><div class='cell-info top'>Sample Screenshots - Slide to navigate.</div><div class='cell-info bottomfull'>PSDLE startup options</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/1VmScOO.jpg")'><div class='cell-info bottomfull'>Default list view!</div></div>
-							<div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (Currently en-us only)</div></div>
+							<div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (en-us only)</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/cfcFoRv.png")'><div class='cell-info bottomfull'>Auto-complete search results to find things faster.</div></div>
 							<div style='background-image:url("//i.imgur.com/nTX4hg6.jpg")'><div class='cell-info bottomfull'>Search by game title and oraganize by name, size, or date!</div></div>
 							<div style='background-image:url("//i.imgur.com/YP5Ft0l.jpg")'><div class='cell-info bottomfull'>Filter out items by category, like demos!</div></div>
@@ -77,7 +77,7 @@
 								<dt id='goto_view'><i class="fa fa-search fa-fw"></i> View, sort, and filter your download list as you desire!</dt>
 							</span>
 							<span>
-								<dt id='goto_pstv'><i class="fa fa-search fa-fw"></i> Determine what is compatible with PS TV! (Currently en-us only)</dt>
+								<dt id='goto_pstv'><i class="fa fa-search fa-fw"></i> Determine what is compatible with PS TV! (en-us only)</dt>
 							</span>
 							<span>
 								<dt id='goto_plus_start'><i class="fa fa-search fa-fw"></i> PS+ Support</dt>
@@ -176,7 +176,11 @@
 						<br /><br />
 						<strong>Does this differentiate between Vita and PS/Vita TV games?</strong><br />
 						<span>
-							At the time of writing PSDLE can attempt to detect PS TV content for <strong>en-us only</strong>. If detected, "TV" will appear next to content's platform.
+							At the time of writing PSDLE can attempt to detect PS TV content for <strong>en-us only</strong>.<br />
+							The option will only show up if using the <strong>en-us</strong> web store, which accepts only <strong>en-us</strong> accounts.<br />
+							This is a limitation of the web store, not PSDLE.<br />
+							<br />
+							If detected, "TV" will appear next to content's platform.
 						</span>
 						<br /><br />
 						<strong>What does PSDLE stand for?</strong><br />
