--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
 							</span>
 							<span>
 								<dt id='goto_export'><i class="fa fa-search fa-fw"></i> Export your list</dt>
-								<dd>CSV format for spreedsheets.</dd>
+								<dd>CSV format for spreadsheets.</dd>
 							</span>
 							<dt>Mobile</dt>
 								<dd>Even on-the-go, don't settle for a featureless download list!</dd>
+								<dd>Desktop version (bottom of mobile store page) is highly recommended, however mobile should be supported.</dd>
 							<dt>Lightweight, portable, consistent.</dt>
 								<dd>Computer or mobile, always the same experience.</dd>
 							<dt>Open source!</dt>
@@ -142,19 +143,21 @@
 						Legacy versions are available <a href='https://github.com/RePod/psdle/tree/da72902be7847ec93ae85555ab6f0e3b2f8948c4'>here</a>. Bug reports will not be accepted and support will not be given for these.</small>
 					</div>
 				</div>
-				<!-- <div class='module'>
-					<a name="screenshots">
-						<h3 tabindex="0"><i class="fa fa-camera fa-fw"></i> Screenshots <i class="module_toggle fa fa-caret-down"></i></h3>
-					</a>
-					<div class='start_hidden'>
-						<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="//imgur.com/a/4oRjv/embed?background=292929&text=ffffff&link=4e76c9&thumbs=true"></iframe>
-					</div>
-				</div> -->
 				<div class='module'>
 					<a name="paq">
 						<h3 tabindex="0"><i class="fa fa-question fa-fw"></i> P.A.Q. (Potentially Asked Questions) <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
+						<strong>Is PSDLE meant to compete with or replace the Download List?</strong> <br />
+						<span>
+							It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br />
+							<br />
+							While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product doesn't live up to PSDLE.
+							Thank them for their awesome work instead, they do it for a living!<br />
+							<br />
+							The Download List is a great thing to have, PSDLE simply makes it better!
+						</span>
+						<br /><br />
 						<strong>Is this safe or a ploy to phish account details?</strong> <br />
 						<span>
 							Yes it is safe, no it is not for phishing account details.<br />
@@ -185,7 +188,7 @@
 						<br /><br />
 						<strong>What does PSDLE stand for?</strong><br />
 						<span>
-							<span style='background-color:#000;color:#000;width:420px;height:1.2em;display:inline-block;cursor:text'></span>
+							<span style='background-color:#000;color:#000;width:420px;height:1.2em;display:inline-block;cursor:text' title="It's a secret."></span>
 						</span>
 						<br /><br />
 						<strong>Am I free to copy, modify, redistribute, etc. PSDLE's source code?</strong><br />
@@ -207,19 +210,19 @@
 						<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br />
 						<br />
 						<p>
-							This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-indentifiable information about you, the visitor, including but not limited to:<br />
+							This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:<br />
 							<ul>
 								<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
 								<li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
 								<li>How you interact with this site <small>(Such as expanding this Privacy Policy section!)</small></li>
 								<li>And a lot more. <a href="//support.google.com/analytics/topic/2919631?hl=en&ref_topic=1008008">Click here</a> to see Google's documentation about Analytics.</li>
 							</ul>
-							To repeat, all information collected through Google Analytics is non-indentifiable, or <strong>anonymous</strong>.
+							To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.
 						</p>
 						<strong>How and why I use the data collected:</strong>
 						<p>
 						By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.
-						For instance, based on interactions with the image carousel I can guage interest of it and expand its features or simplify it.
+						For instance, based on interactions with the image carousel I can gauge interest of it and expand its features or simplify it.
 						Basically, it's beneficial for everyone involved. The users get a better experience and I get the data that enables me to do just that.
 						</p>
 						<strong>Opting Out:</strong>
