GH-PAGES - Context.
We don't use just the download list anymore!

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<span>
 							Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br />
 							<br />
-							If authentication details were left around openly on the download list page I would take my concerns elsewhere.
+							If authentication details were left around openly on the store I would take my concerns elsewhere.
 						</span>
 						<br /><br />
 					<div id="paq_container" class="collapse">
