GH-PAGES - Icons!
Somehow I forgot them.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="page-header">
-						<h3 id="paq">Potentially Asked Questions (P.A.Q.)</h3>
+						<h3 id="paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions (P.A.Q.)</h3>
 					</div>
 					<strong>Is this safe or a ploy to phish account details?</strong> <br />
 						<span>
@@ -204,7 +204,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="page-header">
-						<h3 id="privacy">Privacy policy</h3>
+						<h3 id="privacy"><i class="fa fa-eye fa-fw"></i> Privacy policy</h3>
 					</div>
 					<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br />
 					<br />
