--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<li><a href="#getting_started"><i class="fa fa-check-square-o fa-fw"></i> Getting Started</a></li>
 						<li><a href="#paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions</a></li>
 						<li><a href="#privacy"><i class="fa fa-eye fa-fw"></i> Privacy Policy</a></li>
+						<li><a href="#promo"><i class="fa fa-share fa-fw"></i> Promo</a></li>
 						<!-- </ul></li> -->
 					</ul>
 				</div>
@@ -78,7 +79,7 @@
 							<div id='export' style='background-image:url("//i.imgur.com/SSxMHhq.jpg")'><div class='cell-info bottomfull'>Export what you see in a CSV format!</div></div>
 						</div>
 					</div>
-					<br /><small>Screenshots may not reflect current features or design.</small>
+					<br><small>Screenshots may not reflect current features or design.</small>
 				</div>
 			</div>
 			<div class="row">
@@ -113,12 +114,12 @@
 						<label class="btn btn-primary active btn-block" data-target="#method_direct"><input type="radio"/>Direct</label>
 						<label class="btn btn-primary btn-block" data-target="#method_userscript"><input type="radio"/>Userscript</label>
 						<label class="btn btn-primary btn-block" data-target="#method_bookmarklet"><input type="radio"/><!--<i class="fa fa-mobile fa-fw"></i>-->Bookmarklet</label>
-					</div><br />
+					</div><br>
 					<div id="method_holder" class="accordion-group">
 						<div id='method_direct' class="collapse in">
 							<ol>
 								<li>Copy the following to your clipboard:</li>
-								<!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br /><br />-->
+								<!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
 								<span id='inline_code' class="panel panel-default"><span class="panel-body" style="word-break:break-all">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span></span>
 								<li>Navigate to the the online store.</li>
 								<li>Paste into your browser's address bar.</li>
@@ -145,7 +146,7 @@
 							</ol>
 						</div>
 					</div>
-					After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br />
+					After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br>
 				</div>
 			</div>
 			<div class="row">
@@ -153,50 +154,56 @@
 					<div class="page-header">
 						<h3 id="paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions (P.A.Q.)</h3>
 					</div>
-					<strong>Is this safe or a ploy to phish account details?</strong> <br />
+					<strong>Is this safe or a ploy to phish account details?</strong> <br>
 						<span>
-							Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br />
-							<br />
+							Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br>
+							<br>
 							If authentication details were left around openly on the store I would take my concerns elsewhere.
 						</span>
-						<br /><br />
+						<br><br>
 					<div id="paq_container" class="collapse">
 						<strong>Is PSDLE meant to compete with or replace the Download List?</strong>
-						It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br /><br />
-						While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product doesn't live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br /><br />
-						The Download List is a great thing to have, PSDLE simply makes it better! 
-						<strong>Can it go any faster?</strong> <br />
+						It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br><br>
+						While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product doesn't live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br><br>
+						The Download List is a great thing to have, PSDLE simply makes it better!
+						<br><br>
+						<strong>Can it go any faster?</strong> <br>
 						<span>Disabling "Catalog" during startup will significantly decrease the time between startup and the list at the cost of less features.</span>
-						<br /><br />
-						<strong>Does the search box support <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regex</a>?</strong><br />
+						<br><br>
+						<strong>Does the search box support <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regex</a>?</strong><br>
 						<span>
-							Yes! Simply wrap the regex in /, like usual.<br />
-							PSDLE supports the /i modifier and a custom /d modifier which <strong>excludes</strong> matches.<br />
+							Yes! Simply wrap the regex in /, like usual.<br>
+							PSDLE supports the /i modifier and a custom /d modifier which <strong>excludes</strong> matches.<br>
 							For more information about Javascript Regex, <a href="//developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions" target="_blank">click here</a>.
 						</span>
-						<br /><br />
-						<strong>Does this differentiate between Vita and PS/Vita TV games?</strong><br />
+						<br><br>
+						<strong>Does this differentiate between Vita and PS/Vita TV games?</strong><br>
 						<span>
-							At the time of writing PSDLE can attempt to detect PS TV content for <strong>en-us only</strong>.<br />
-							The option will only show up if using the <strong>en-us</strong> web store, which accepts only <strong>en-us</strong> accounts.<br />
-							This is a limitation of the web store, not PSDLE.<br />
-							<br />
+							At the time of writing PSDLE can attempt to detect PS TV content for <strong>en-us only</strong>.<br>
+							The option will only show up if using the <strong>en-us</strong> web store, which accepts only <strong>en-us</strong> accounts.<br>
+							This is a limitation of the web store, not PSDLE.<br>
+							<br>
 							If detected, "TV" will appear next to content's platform.
 						</span>
-						<br /><br />
-						<strong>What does PSDLE stand for?</strong><br />
+						<br><br>
+						<strong>What does PSDLE stand for?</strong><br>
 						<span>
 							<span style='background-color:#000;color:#000;width:100%;max-width:420px;height:1.2em;display:inline-block;cursor:text'></span>
 						</span>
-						<br /><br />
-						<strong>Am I free to copy, modify, redistribute, etc. PSDLE's source code?</strong><br />
+						<br><br>
+						<strong>Am I free to write an article/share it/print out and marry PSDLE?</strong><br>
 						<span>
-							Yes, per the rules of <a href='//github.com/RePod/psdle/blob/master/LICENSE'>the license</a>.<br />
-							Please do not imply that your version is supported by, endorsed by, or associated with the official one.<br />
-							<br />
+							Sure! Check out <a href="#promo">Promotional Material</a> for more information.
+						</span>
+						<br><br>
+						<strong>Am I free to copy, modify, redistribute, etc. PSDLE's source code?</strong><br>
+						<span>
+							Yes, per the rules of <a href='//github.com/RePod/psdle/blob/master/LICENSE'>the license</a>.<br>
+							Please do not imply that your version is supported by, endorsed by, or associated with the official one.<br>
+							<br>
 							If you have ideas, suggestions, or code additions/improvements, send them my way!
 						</span>
-						<br /><br />
+						<br><br>
 					</div>
 					<button id="paq_more" class="btn btn-primary" data-target="#paq_container" data-toggle="collapse" style="cursor:pointer">More...</button>
 				</div>
@@ -206,49 +213,61 @@
 					<div class="page-header">
 						<h3 id="privacy"><i class="fa fa-eye fa-fw"></i> Privacy policy</h3>
 					</div>
-					<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br />
-					<br />
-					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-indentifiable information about you, the visitor, including but not limited to:<br />
+					<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br>
+					<br>
+					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-indentifiable information about you, the visitor, including but not limited to:<br>
 					<ul>
 						<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
 						<li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
 						<li>How you interact with this site <small>(Such as expanding the P.A.Q.)</small></li>
 						<li>And a lot more. <a href="//support.google.com/analytics/topic/2919631?hl=en&amp;ref_topic=1008008">Click here</a> to see Google's documentation about Analytics.</li>
 					</ul>
-					To repeat, all information collected through Google Analytics is non-indentifiable, or <strong>anonymous</strong>.<br /><br />
+					To repeat, all information collected through Google Analytics is non-indentifiable, or <strong>anonymous</strong>.<br><br>
 					<strong>How and why I use the data collected:</strong>
 					<p>
-					By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br /><br />
+					By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br><br>
 					For instance, I noticed a significant portion of the site traffic is from mobile devices thus I have remade the website in <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> to accomodate.
 					</p>
 					<strong>Opting Out:</strong>
 					<p>
-					If this policy is not to your liking, but wish continue to use this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br />
+					If this policy is not to your liking, but wish continue to use this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br>
 					If the opt-out procedure is not to your liking I would advise ceasing use of this webpage completely.
 					</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="page-header">
+						<h3 id="promo"><i class="fa fa-share fa-fw"></i> Promotional Material</h3>
+					</div>
+					<strong><a href="favicon.png">Favicon (16x16)</a></strong><br>
+					Logo: <strong><a href="logo/1_psdle_do_not_even.png">22x8</a></strong> - <strong><a href="logo/2_psdle_tiny.png">42x16</a></strong> - <strong><a href="logo/3_psdle_mini.png">84x31</a></strong> - <strong><a href="logo/4_psdle.png">167x62</a></strong> - <strong><a href="logo/5_psdle_big.png">1670x620</a></strong> <small>(<abbr title="Please don't.">Contact for larger resolutions</abbr>)</small><br>
+					<br>
+					Please no not modify the logo but feel free to resize it as needed!<br>
+					While the screenshots provided are also available to use, I would prefer using your own.
+				</div>
+			</div>
 		</div>
-		
+		<br>
 		<div id="footer">
 			<span>
-				<a href='#'><i class="fa fa-arrow-up fa-fw" style='font-size:16px;'></i> Back to top</a><br />
-				<a href='http://http://getbootstrap.com/'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> Bootstrap</a><br />
-				<a href='//fortawesome.github.io/Font-Awesome/'><i class="fa fa-flag fa-fw" style='font-size:16px;'></i> Font Awesome</a><br />
-				<a href='//jquery.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery</a><br />
-				<a href='//jqueryui.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery UI</a><br />
-				<a href='#yo'><i class="fa fa-asterisk fa-fw" style='font-size:16px;'></i>And the Sheep</a><br />
+				<a href='#'><i class="fa fa-arrow-up fa-fw" style='font-size:16px;'></i> Back to top</a><br>
+				<a href='http://http://getbootstrap.com/'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> Bootstrap</a><br>
+				<a href='//fortawesome.github.io/Font-Awesome/'><i class="fa fa-flag fa-fw" style='font-size:16px;'></i> Font Awesome</a><br>
+				<a href='//jquery.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery</a><br>
+				<a href='//jqueryui.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery UI</a><br>
+				<a href='#yo'><i class="fa fa-asterisk fa-fw" style='font-size:16px;'></i>And the Sheep</a><br>
 			</span>
 			<span>
-				<a href='//repod.github.io/psdle'><i class="fa fa-home fa-fw"></i> Home</a><br />
-				<a href='//github.com/RePod/psdle/'><i class="fa fa-code-fork fa-fw"></i> Repository</a><br />
-				<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle fa-fw"></i> Submit an Issue</a><br />
-				<a href='//github.com/RePod/psdle/blob/master/LICENSE'><i class="fa fa-file-text fa-fw"></i> PSDLE License</a><br />
-				<a href='//github.com/RePod'><i class="fa fa-plus fa-fw"></i> More</a><br />
-			</span><br /><br />
+				<a href='//repod.github.io/psdle'><i class="fa fa-home fa-fw"></i> Home</a><br>
+				<a href='//github.com/RePod/psdle/'><i class="fa fa-code-fork fa-fw"></i> Repository</a><br>
+				<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle fa-fw"></i> Submit an Issue</a><br>
+				<a href='//github.com/RePod/psdle/blob/master/LICENSE'><i class="fa fa-file-text fa-fw"></i> PSDLE License</a><br>
+				<a href='//github.com/RePod'><i class="fa fa-plus fa-fw"></i> More</a><br>
+			</span><br><br>
 			<span class='text'>
-				PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br />
-				Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br />
+				PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br>
+				Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br>
 				Screenshots are for educational and informative purposes and are not hosted on this domain.
 			</span>
 		</div>
