GH-PAGES - Cleanup
That Bookmarklet section.

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 							</ol>
 						</div>
 						<div id='method_bookmarklet' class="collapse">
-							<i class="fa fa-mobile"></i> Recommend for mobile and tablets.
+							<i class="fa fa-mobile"></i> Recommended for mobile and tablets.
 							<ol>
-								<li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.js');void(0);">Run PSDLE</a>
+								<li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.js');void(0);"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
 								<li>Navigate to the the online store.</li>
 								<li>Select the bookmark from your bookmarks.</li>
 								<li>PSDLE should activate.</li>								
