GH-PAGES - Son of Cleanup
That P.A.Q.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<div class="page-header">
 						<h3 id="paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions (P.A.Q.)</h3>
 					</div>
-					<strong>Is this safe or a ploy to phish account details?</strong> <br>
+					<strong>Is this safe or a ploy to phish account details?</strong><br>
 						<span>
 							Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br>
 							<br>
@@ -162,12 +162,12 @@
 						</span>
 						<br><br>
 					<div id="paq_container" class="collapse">
-						<strong>Is PSDLE meant to compete with or replace the Download List?</strong>
+						<strong>Is PSDLE meant to compete with or replace the Download List?</strong><br>
 						It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br><br>
 						While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product doesn't live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br><br>
 						The Download List is a great thing to have, PSDLE simply makes it better!
 						<br><br>
-						<strong>Can it go any faster?</strong> <br>
+						<strong>Can it go any faster?</strong><br>
 						<span>Disabling "Catalog" during startup will significantly decrease the time between startup and the list at the cost of less features.</span>
 						<br><br>
 						<strong>Does the search box support <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regex</a>?</strong><br>
