GH-PAGES - Typo
What's a spreedsheet?

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<dt id='goto_newbox_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Download Queue support</dt>
 							<dd>Easily send items where you want them to go.</dd>
 							<dt id='goto_export'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Export your list</dt>
-							<dd>CSV format for spreedsheets.</dd>
+							<dd>CSV format for spreadsheets.</dd>
 							<dt>Mobile</dt>
 								<dd>Even on-the-go, don't settle for a featureless download list!</dd>
 							<dt>Lightweight, portable, consistent.</dt>
