GH-PAGES - Typos intensify.
I hilariously decided to use Narrator to read the page back to me and
I'm finding everything wrong!

--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
 					</div>
 					<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br>
 					<br>
-					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-indentifiable information about you, the visitor, including but not limited to:<br>
+					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:<br>
 					<ul>
 						<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
 						<li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
 						<li>How you interact with this site <small>(Such as expanding the P.A.Q.)</small></li>
 						<li>And a lot more. <a href="//support.google.com/analytics/topic/2919631?hl=en&amp;ref_topic=1008008">Click here</a> to see Google's documentation about Analytics.</li>
 					</ul>
-					To repeat, all information collected through Google Analytics is non-indentifiable, or <strong>anonymous</strong>.<br><br>
+					To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.<br><br>
 					<strong>How and why I use the data collected:</strong>
 					<p>
 					By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br><br>
