GH-PAGES - That's not even a typo!
Or is it.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 					</p>
 					<strong>Opting Out:</strong>
 					<p>
-					If this policy is not to your liking, but wish continue to use this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br>
+					If this policy is not to your liking, but wish to continue using this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br>
 					If the opt-out procedure is not to your liking I would advise ceasing use of this webpage completely.
 					</p>
 				</div>
