GH-PAGES - This is though.
Thanks Narrator!

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<strong><a href="favicon.png">Favicon (16x16)</a></strong><br>
 					Logo: <strong><a href="logo/1_psdle_do_not_even.png">22x8</a></strong> - <strong><a href="logo/2_psdle_tiny.png">42x16</a></strong> - <strong><a href="logo/3_psdle_mini.png">84x31</a></strong> - <strong><a href="logo/4_psdle.png">167x62</a></strong> - <strong><a href="logo/5_psdle_big.png">1670x620</a></strong> <small>(<abbr title="Please don't.">Contact for larger resolutions</abbr>)</small><br>
 					<br>
-					Please no not modify the logo but feel free to resize it as needed!<br>
+					Please do not modify the logo but feel free to resize it as needed!<br>
 					While the screenshots provided are also available to use, I would prefer using your own.
 				</div>
 			</div>
