GH-PAGES - PSDLE Awareness Day
Hilarious.

--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
 			<span class='text'>
 				PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br>
 				Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br>
-				Screenshots are for educational and informative purposes and are not hosted on this domain.
+				Screenshots are for educational and informative purposes and are not hosted on this domain.<br>
+				<br>
+				April 5th is PSDLE Awareness Day, since 2015.
 			</span>
 		</div>
 	</body>
