GH-PAGES -  Gone Chrome
Chromealicious.

--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
 					<div class="page-header">
 						<h3 id="getting_started"><i class="fa fa-check-square-o fa-fw"></i> Getting Started</h3>
 					</div>
-					<div id='method_select' class="btn-group input-group btn-group-justified xs-" data-toggle="buttons">
+					<div id='method_select' class="btn-group input-group btn-group-justified" data-toggle="buttons">
 						<label class="btn btn-primary active btn-block" data-target="#method_direct"><input type="radio"/>Direct</label>
 						<label class="btn btn-primary btn-block" data-target="#method_userscript"><input type="radio"/>Userscript</label>
 						<label class="btn btn-primary btn-block" data-target="#method_bookmarklet"><input type="radio"/><!--<i class="fa fa-mobile fa-fw"></i>-->Bookmarklet</label>
+						<label class="btn btn-primary btn-block" data-target="#method_extension"><input type="radio"/>Extension</label>
 					</div><br>
 					<div id="method_holder" class="accordion-group">
 						<div id='method_direct' class="collapse in">
@@ -144,6 +145,12 @@
 								<li>Select the bookmark from your bookmarks.</li>
 								<li>PSDLE should activate.</li>								
 							</ol>
+						</div>
+						<div id='method_extension' class="collapse">
+							<a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='text-align:center;display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a><br>
+							<br>
+							<small>A Firefox extension is planned and currently being developed.</small><br>
+							<br>
 						</div>
 					</div>
 					After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br>
