GH-PAGES - Updated Privacy Policy
Now for PSDLE!

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 					<div class="page-header">
 						<h3 id="privacy"><i class="fa fa-eye fa-fw"></i> Privacy policy</h3>
 					</div>
-					<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br>
-					<br>
+					<!-- <small><strong>The following policy is only in regards to this website's use of Google Analytics. For PSDLE's see below.</strong></small><br> -->
+					<h4>Google Analytics:</h4>
 					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:<br>
 					<ul>
 						<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
@@ -238,6 +238,26 @@
 					<p>
 					If this policy is not to your liking, but wish to continue using this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br>
 					If the opt-out procedure is not to your liking I would advise ceasing use of this webpage completely.
+					</p>
+					<br>
+					<h4>PSDLE:</h4>
+					<p>
+						PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal.<br>
+						<br>
+						PSDLE accesses the following information when used:
+						<ul>
+							<li>Purchase information for generating the list. <small>(PS+ status, time of purchase, etc.)</small></li>
+							<li>Console activation information. <small>(only if Queue is enabled)</small></li>
+							<li>Download Queue information. <small>(only if Queue is enabled)</small></li>
+							<li>Store language. <small>(for determining language-specific things)</small></li>
+						</ul>
+						Remaining PSDLE functionality is user-selectable (e.g. Catalog) and does not require personal information.<br>
+						<br>
+						
+						If you would like to keep a permanent list please use the "Export View" function.<br>
+						<br>
+						PSDLE does not transmit any information to an external location. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.<br>
+						Other products or services may interfere with, tamper with, modify, or intercept information PSDLE obtains. This should not be a concern as this information is publicly available in the page context, PSDLE just caches it.
 					</p>
 				</div>
 			</div>
@@ -266,6 +286,7 @@
 			</span>
 			<span>
 				<a href='//repod.github.io/psdle'><i class="fa fa-home fa-fw"></i> Home</a><br>
+				<a href='#privacy'><i class="fa fa-eye"></i> Privacy Policy</a><br>
 				<a href='//github.com/RePod/psdle/'><i class="fa fa-code-fork fa-fw"></i> Repository</a><br>
 				<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle fa-fw"></i> Submit an Issue</a><br>
 				<a href='//github.com/RePod/psdle/blob/master/LICENSE'><i class="fa fa-file-text fa-fw"></i> PSDLE License</a><br>
