GH-PAGES - Upupdated Privacy Policy
Pre-mature commits.

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 						</ul>
 						Remaining PSDLE functionality is user-selectable (e.g. Catalog) and does not require personal information.<br>
 						<br>
+						Information collected during PSDLE's runtime <strong>is not permanently stored by PSDLE, and never will be.</strong> This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). A minor exception to this is the Chrome extension which runs a background task to determine if the store is active or not.
 						
 						If you would like to keep a permanent list please use the "Export View" function.<br>
 						<br>
