GH-PAGES - Be Bold
Changes for consistent formatting.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					</div>
 					<!-- <small><strong>The following policy is only in regards to this website's use of Google Analytics. For PSDLE's see below.</strong></small><br> -->
 					<h4>Google Analytics:</h4>
-					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:<br>
+					This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:
 					<ul>
 						<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
 						<li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
@@ -231,7 +231,7 @@
 					To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.<br><br>
 					<strong>How and why I use the data collected:</strong>
 					<p>
-					By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br><br>
+					By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br>
 					For instance, I noticed a significant portion of the site traffic is from mobile devices thus I have remade the website in <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> to accomodate.
 					</p>
 					<strong>Opting Out:</strong>
@@ -241,7 +241,7 @@
 					</p>
 					<br>
 					<h4>PSDLE:</h4>
-					<p>
+					
 						PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal.<br>
 						<br>
 						PSDLE accesses the following information when used:
@@ -257,9 +257,8 @@
 						
 						If you would like to keep a permanent list please use the "Export View" function.<br>
 						<br>
-						PSDLE does not transmit any information to an external location. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.<br>
+						PSDLE <strong>does not transmit any information to an external location</strong>. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.
 						Other products or services may interfere with, tamper with, modify, or intercept information PSDLE obtains. This should not be a concern as this information is publicly available in the page context, PSDLE just caches it.
-					</p>
 				</div>
 			</div>
 			<div class="row">
