--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 	<head>
 		<title>PSDLE</title>
 		<link rel="SHORTCUT ICON" href="favicon.png">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta charset="utf-8" />
+
+		<!-- General -->
+		<meta name="description" content="Improving everyone's favorite download list, one loop at a time. A better download list with PS+ support, Download Queue support, and more!">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+
+		<!-- OpenGraph -->
+		<meta property="og:title" content="PSDLE" />
+		<meta property="og:description" content="Improving everyone's favorite download list, one loop at a time. A better download list with PS+ support, Download Queue support, and more!" />
+		<meta property="og:url" content="//repod.github.io/psdle/" />
+		<meta property="og:image" content="//repod.github.io/psdle/logo/6_psdle_64px.png" />
+		
+		<!-- CSS -->
 		<link rel="stylesheet" href="bootstrap-3.3.2-dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="psdle_carousel.css" />
-		<script src="js/jquery-1.11.2.min.js"></script>
+		
+		<!-- Javascript -->
+		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/plugins/jquery-color.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.11.2.custom/jquery-ui.min.js"></script>
-		<script src="bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
-		<script src="js/site.js"></script>
-		<script src="js/carousel.js"></script>
-		<!-- OpenGraph -->
-		<meta property="og:title" content="PSDLE" />
-		<meta property="og:description" content="Improving everyone's favorite online download list, one loop at a time." />
-		<meta property="og:url" content="//repod.github.io/psdle/" />
-		<meta property="og:image" content="//repod.github.io/psdle/logo/6_psdle_64px.png" />
+		<script type="text/javascript" src="bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="js/carousel.js"></script>
+
 		<!-- GA -->
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -134,7 +143,7 @@
 								<li>Install <a class="" href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> <small>(Firefox)</small>, <a class="" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en" target="_blank">Tampermonkey</a> <small>(Chrome)</small>, or equivalent.</li>
 								<li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
 								<li>Navigate to the the online store.</li>
-								<li>PSDLE should activate automatically.</li>							
+								<li>PSDLE should activate automatically.</li>
 							</ol>
 						</div>
 						<div id='method_bookmarklet' class="collapse">
@@ -143,7 +152,7 @@
 								<li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.js');void(0);"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
 								<li>Navigate to the the online store.</li>
 								<li>Select the bookmark from your bookmarks.</li>
-								<li>PSDLE should activate.</li>								
+								<li>PSDLE should activate.</li>
 							</ol>
 						</div>
 						<div id='method_extension' class="collapse">
