--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 							<ol>
 								<li>Copy the following to your clipboard:</li>
 								<!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
-								<span id='inline_code' class="panel panel-default"><span class="panel-body" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span></span>
+								<span id='inline_code' class="panel panel-default"><span class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span></span>
 								<li>Navigate to the the online store.</li>
 								<li>Paste into your browser's address bar.</li>
-								<li>Ensure the pasted line begins with <strong translate="no">javascript:</strong> If not, add it.</li>
+								<li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
 								<li>Submit.</li>
 								<li>PSDLE should activate.</li>
 							</ol>
