GH-PAGES - Call to arms.
On fire. Firefox arms.

--- a/index.html
+++ b/index.html
@@ -154,10 +154,13 @@
 								<li>PSDLE should activate.</li>
 							</ol>
 						</div>
-						<div id='method_extension' class="collapse">
-							<a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='text-align:center;display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a><br>
+						<div id='method_extension' class="collapse text-center">
+							<a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a><br>
 							<br>
-							<small>A Firefox extension is planned and currently being developed.</small><br>
+							<small>
+                                A Firefox extension is planned and currently being developed.<br>
+                                Have experience developing Firefox extensions? <a href="//github.com/RePod/psdle">Contact me!</a>
+                            </small><br>
 							<br>
 						</div>
 					</div>
