GH-PAGES - New feature and method disclaimer.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 						<dl>
 							<dt>One convenient list of all your content!</dt>
 							<dt id='goto_view'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> View, sort, and filter your download list as you desire!</dt>
+                            <dt>Easily see Vita-supported content!</dt>
 							<dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is compatible with PS TV! (en-us only)</dt>
 							<dt id='goto_plus_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> PS+ Support</dt>
 							<dd>See what is and isn't tied to your subscription.</dd>
@@ -126,7 +127,7 @@
 					</div><br>
 					<div id="method_holder" class="accordion-group">
 						<div id='method_direct' class="collapse in">
-							<ol>
+                            <ol>
 								<li>Copy the following to your clipboard:</li>
 								<!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
 								<span id='inline_code' class="panel panel-default"><span class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span></span>
@@ -146,6 +147,10 @@
 							</ol>
 						</div>
 						<div id='method_bookmarklet' class="collapse">
+                            <div class="label label-primary method_info">
+                                <!-- <i class="fa fa-info fa-fw" style="float:left;"></i> -->
+                                This method requests the file from this site (hosted by GitHub) when used.<br>
+                            </div>
 							<i class="fa fa-mobile"></i> Recommended for mobile and tablets.
 							<ol>
 								<li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.js');void(0);"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
