--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 						<div id='caro_slides'>
 							<div style='background-image:url("//i.imgur.com/nQShH6n.jpg")'><div class='cell-info top'>Sample Screenshots - Slide to navigate.</div><div class='cell-info bottomfull'>PSDLE startup options</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/1VmScOO.jpg")'><div class='cell-info bottomfull'>Default list view!</div></div>
-							<div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (en-us only)</div></div>
+							<div id='vita' style='backgorund-image:url("//i.imgur.com/NHu5ynw.jpg")'><div class='cell-info bottomfull'>Supported non-native Vita content highlighted.</div></div>
+                            <div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (en-us only)</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/cfcFoRv.png")'><div class='cell-info bottomfull'>Auto-complete search results to find things faster.</div></div>
 							<div style='background-image:url("//i.imgur.com/nTX4hg6.jpg")'><div class='cell-info bottomfull'>Search by game title and organize by name, size, or date!</div></div>
 							<div style='background-image:url("//i.imgur.com/YP5Ft0l.jpg")'><div class='cell-info bottomfull'>Filter out items by category, like demos!</div></div>
@@ -99,7 +100,7 @@
 						<dl>
 							<dt>One convenient list of all your content!</dt>
 							<dt id='goto_view'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> View, sort, and filter your download list as you desire!</dt>
-                            <dt>Easily see Vita-supported content!</dt>
+                            <dt id='goto_vita'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Easily see Vita-supported content!</dt>
 							<dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is compatible with PS TV! (en-us only)</dt>
 							<dt id='goto_plus_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> PS+ Support</dt>
 							<dd>See what is and isn't tied to your subscription.</dd>
