--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div id='caro_slides'>
 							<div style='background-image:url("//i.imgur.com/nQShH6n.jpg")'><div class='cell-info top'>Sample Screenshots - Slide to navigate.</div><div class='cell-info bottomfull'>PSDLE startup options</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/1VmScOO.jpg")'><div class='cell-info bottomfull'>Default list view!</div></div>
-							<div id='vita' style='backgorund-image:url("//i.imgur.com/NHu5ynw.jpg")'><div class='cell-info bottomfull'>Supported non-native Vita content highlighted.</div></div>
+							<div id='vita' style='background-image:url("//i.imgur.com/NHu5ynw.jpg")'><div class='cell-info bottomfull'>Supported non-native Vita content highlighted.</div></div>
                             <div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (en-us only)</div></div>
 							<div id='view' style='background-image:url("//i.imgur.com/cfcFoRv.png")'><div class='cell-info bottomfull'>Auto-complete search results to find things faster.</div></div>
 							<div style='background-image:url("//i.imgur.com/nTX4hg6.jpg")'><div class='cell-info bottomfull'>Search by game title and organize by name, size, or date!</div></div>
