GH-PAGES - Horribly Effective.
Apparently the only other mention to the repository is in the footer.

Nice.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<h3 id="paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions (P.A.Q.)</h3>
 					</div>
 					<strong>Is this safe or a ploy to phish account details?</strong><br>
-					Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br>
+					Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, <a href="//github.com/RePod/psdle/">feel free to view the horribly effective code yourself and decide.</a><br>
 					<br>
 					If authentication details were left around openly on the store I would take my concerns elsewhere.
 					<br><br>
