There was more stock in the back.
Unfortunately.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
                         </div>
                     </div>
                     After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br>
+                    <br>
+                    <div style="text-align:center">
+                        Like PSDLE? Please <a href="#support">support it!</a>
+                    </div>
                 </div>
             </div>
             <div class="row">
