Untimely delivery of more stock.

--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
                     <strong>Transaction notes:</strong>
                     <ul>
                         <li>PSDLE is still available freely for those unable or uninterested to support it. Refer to the <a href="#getting_started">Getting Started</a> section.</li>
-                        <li>No additional products or services beyond what is available currently on this site will be rendered when purchasing through PayPal. Refer to the <a href="#getting_started">Getting Started</a> section.</li></li>
+                        <li>After completing the transaction, refer to the <a href="#getting_started">Getting Started</a> section for instructions on how to use PSDLE in a way convenient for you.</li>
+                        <li>No additional products or services beyond what is available currently on this site will be rendered when purchasing through PayPal. Refer to the <a href="#getting_started">Getting Started</a> section.</li>
                     </ul>
                 </div>
             </div>
