GH-PAGES - Rewrite search section.
Wew.

--- a/index.html
+++ b/index.html
@@ -201,14 +201,19 @@
                         Keep in mind this increases the time to generate the list, relative to the amount of items on your list.
                         <br><br>
                         
-                        <strong>Does the search box support <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regex</a>?</strong><br>
-                        Yes! Simply wrap the regex in /, like usual.<br>
-                        PSDLE supports the <strong>/i</strong> modifier and custom modifiers:<br><br>
+                        <strong>What all can I do with the search options?</strong><br>
                         <ul>
-                            <li>The <strong>/d</strong> modifier which <strong>excludes</strong> matches.</li>
-                            <li>The <strong>/p</strong> modifier which <strong>searches product IDs.</strong></li>
+                            <li>Get auto-complete suggestions to find things faster.</li>
+                            <li>Filter by system.</li>
+                                <ul><li>If Catalog is enabled, Classics inherit their original system (like PS1).</li></ul>
+                            <li>Filter by categories (avatar, demo, etc) if Catalog is enabled.</li>
+                            <li>Use <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regular expressions (regex)</a>.
+                                <ul>
+                                    <li>Wrap the search string in / like normal.</li>
+                                    <li>Use the custom <strong>/d</strong> modifier to <strong>exclude/invert</strong> matches.</li>  
+                                </ul>
                         </ul>
-                        They can be used with each other (excluding ones that change the search target like <strong>/p</strong>).<br>
+
                         For more information about Javascript Regex, <a href="//developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions" target="_blank">click here</a>.
                         <br><br>
                         
