GH-PAGES - New carousel slide.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                             <div id='vita' style='background-image:url("//i.imgur.com/NHu5ynw.jpg")'><div class='cell-info bottomfull'>Supported non-native Vita content highlighted.</div></div>
                             <div id='pstv' style='background-image:url("//i.imgur.com/k1HmKya.jpg")'><div class='cell-info bottomfull'>See PS TV compatible content! (en-us only)</div></div>
                             <div id='view' style='background-image:url("//i.imgur.com/cfcFoRv.png")'><div class='cell-info bottomfull'>Auto-complete search results to find things faster.</div></div>
+                            <div style='background-image:url("//i.imgur.com/sXpYi1o.jpg")'><div class='cell-info bottomfull'>Advanced search for things other than the name, like product IDs!</div></div>
                             <div style='background-image:url("//i.imgur.com/nTX4hg6.jpg")'><div class='cell-info bottomfull'>Search by game title and organize by name, size, or date!</div></div>
                             <div style='background-image:url("//i.imgur.com/YP5Ft0l.jpg")'><div class='cell-info bottomfull'>Filter out items by category, like demos!</div></div>
                             <div id='plus_start' style='background-image:url("//i.imgur.com/IMLxpks.jpg")'><div class='cell-info bottomfull'>PS+ content shown with yellow border around icons.</div></div>
