GH-PAGES - Disclaimer.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                             <dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is compatible with PS TV! (en-us only)</dt>
                             <dt id='goto_plus_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> PS+ Support</dt>
                             <dd>See what is and isn't tied to your subscription.</dd>
+                            <dd>Requires active subscription.</dd>
                             <dt id='goto_newbox_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Download Queue support</dt>
                             <dd>Easily send items where you want them to go.</dd>
                             <dt id='goto_export'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Export your list</dt>
